# api.yml
@@ -16,6 +16,8 @@ paths:
         - application/json
       produces:
         - application/json
+      tags:
+        - Internal
       parameters:
         - in: body
           name: emailData
@@ -58,6 +60,8 @@ paths:
         - application/json
       produces:
         - application/json
+      tags:
+        - Internal
       parameters:
         - in: body
           name: body
@@ -90,4 +94,126 @@ paths:
         400:
           description: Bad request
         500:
+          description: Internal server error
+  /send-notification:
+    post:
+      summary: Send a notification
+      description: Sends a notification to the specified user
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      tags:
+        - Internal
+      parameters:
+        - in: body
+          name: body
+          description: Notification details
+          required: true
+          schema:
+            type: object
+            properties:
+              userId:
+                type: string
+                description: ID of the user to send the notification to
+              title:
+                type: string
+                description: Title of the notification
+              info:
+                type: string
+                description: Additional information for the notification
+      responses:
+        200:
+          description: Notification sent successfully
+          schema:
+            type: object
+            properties:
+              success:
+                type: boolean
+                description: Indicates if the notification was sent successfully
+              message:
+                type: string
+                description: Message indicating the status of the notification sending process
+        400:
+          description: Bad request
+        500:
+          description: Internal server error
+  /get-notifications:
+    get:
+      summary: Get notifications
+      description: Retrieves notifications for the current user
+      produces:
+        - application/json
+      parameters:
+        - in: header
+          name: X-User-Id
+          description: ID of the user sending the notification
+          required: true
+          type: string
+      responses:
+        200:
+          description: Successfully retrieved notifications
+          schema:
+            type: object
+            properties:
+              notifications:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    userId:
+                      type: string
+                      description: ID of the user who received the notification
+                    title:
+                      type: string
+                      description: Title of the notification
+                    info:
+                      type: string
+                      description: Additional information for the notification
+                    viewed:
+                      type: boolean
+                      description: Indicates if the notification has been viewed
+                    timeStamp:
+                      type: string
+                      format: date-time
+                      description: Timestamp when the notification was created
+        500:
+          description: Internal server error
+  /read-notification:
+    post:
+      summary: Mark a notification as viewed
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - name: X-User-Id
+          in: header
+          description: User ID
+          required: true
+          type: string
+        - name: notificationId
+          in: body
+          description: ID of the notification to mark as viewed
+          required: true
+          schema:
+            type: object
+            properties:
+              notificationId:
+                type: string
+      responses:
+        '200':
+          description: Notification marked as viewed successfully
+          schema:
+            type: object
+            properties:
+              success:
+                type: boolean
+                example: true
+              message:
+                type: string
+                example: Notification read successfully
+        '400':
+          description: No notification found
+        '500':
           description: Internal server error
